# Optimization-Problems

./: README.md
codigo/: CMakeLists.txt  Deliver.cpp  Deliver.h  DeliverMan.cpp  DeliverMan.h  README.md  Utils.cpp  Utils.h  main.cpp
documentacao/: uml.drawio
documentacao/html/: DeliverMan_8cpp.html  DeliverMan_8cpp__incl.map  DeliverMan_8h.html  DeliverMan_8h__incl.map  DeliverMan_8h_source.html  Deliver_8h__dep__incl.map  Deliver_8h__incl.map  Deliver_8h_source.html  Utils_8cpp__incl.md5  Utils_8h.html  Utils_8h__dep__incl.map  Utils_8h__dep__incl.md5  Utils_8h__incl.map  Utils_8h__incl.md5  Utils_8h_source.html  classDeliver-members.html  classDeliver.html  classDeliverMan-members.html  files.html  functions.html  functions_vars.html  globals_func.html  main_8cpp__incl.md5  menudata.js
documentacao/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_9.js  all_c.js  all_d.js  files_0.js  files_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_a.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_5.js  variables_7.js
input/: carrinhas_test_1.txt  carrinhas_test_2.txt  encomendas_test_1.txt  encomendas_test_2.txt  small_test_car.txt  small_test_enc.txt
